attached_assets/Pasted--workspace-pytest-tests-test-critical-errors-fixed-py-test-session-s-1757181251044_1757181251046.txt
~/workspace$ pytest tests/test_critical_errors_fixed.py 
=========================== test session starts ============================
platform linux -- Python 3.11.13, pytest-8.4.2, pluggy-1.6.0
rootdir: /home/runner/workspace
configfile: pyproject.toml
plugins: cov-6.2.1, mock-3.15.0
collected 0 items / 1 error                                                

================================== ERRORS ==================================
___________ ERROR collecting tests/test_critical_errors_fixed.py ___________
.pythonlibs/lib/python3.11/site-packages/_pytest/python.py:498: in importtestmodule
    mod = import_path(
.pythonlibs/lib/python3.11/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/nix/store/7d088dip86hlzri9sk0h78b63yfmx0a0-python3-3.11.13/lib/python3.11/importlib/__init__.py:126: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1204: in _gcd_import
    ???
<frozen importlib._bootstrap>:1176: in _find_and_load
    ???
<frozen importlib._bootstrap>:1147: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:690: in _load_unlocked
    ???
.pythonlibs/lib/python3.11/site-packages/_pytest/assertion/rewrite.py:177: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
.pythonlibs/lib/python3.11/site-packages/_pytest/assertion/rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/nix/store/7d088dip86hlzri9sk0h78b63yfmx0a0-python3-3.11.13/lib/python3.11/ast.py:50: in parse
    return compile(source, filename, mode, flags,
E     File "/home/runner/workspace/tests/test_critical_errors_fixed.py", line 2
E       ```python
E       ^
E   SyntaxError: invalid syntax
========================= short test summary info ==========================
ERROR tests/test_critical_errors_fixed.py
!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!
============================= 1 error in 0.20s =============================
~/workspace$ pytest tests/test_critical_errors_fixed.py 
=========================== test session starts ============================
platform linux -- Python 3.11.13, pytest-8.4.2, pluggy-1.6.0
rootdir: /home/runner/workspace
configfile: pyproject.toml
plugins: cov-6.2.1, mock-3.15.0
collected 0 items / 1 error                                                

================================== ERRORS ==================================
___________ ERROR collecting tests/test_critical_errors_fixed.py ___________
.pythonlibs/lib/python3.11/site-packages/_pytest/python.py:498: in importtestmodule
    mod = import_path(
.pythonlibs/lib/python3.11/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/nix/store/7d088dip86hlzri9sk0h78b63yfmx0a0-python3-3.11.13/lib/python3.11/importlib/__init__.py:126: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1204: in _gcd_import
    ???
<frozen importlib._bootstrap>:1176: in _find_and_load
    ???
<frozen importlib._bootstrap>:1147: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:690: in _load_unlocked
    ???
.pythonlibs/lib/python3.11/site-packages/_pytest/assertion/rewrite.py:177: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
.pythonlibs/lib/python3.11/site-packages/_pytest/assertion/rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/nix/store/7d088dip86hlzri9sk0h78b63yfmx0a0-python3-3.11.13/lib/python3.11/ast.py:50: in parse
    return compile(source, filename, mode, flags,
E     File "/home/runner/workspace/tests/test_critical_errors_fixed.py", line 533
E       ```
E       ^
E   SyntaxError: invalid syntax
========================= short test summary info ==========================
ERROR tests/test_critical_errors_fixed.py
!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!
============================= 1 error in 0.25s =============================
~/workspace$ pytest tests/test_critical_errors_fixed.py 
=========================== test session starts ============================
platform linux -- Python 3.11.13, pytest-8.4.2, pluggy-1.6.0
rootdir: /home/runner/workspace
configfile: pyproject.toml
plugins: cov-6.2.1, mock-3.15.0
collected 22 items                                                         

tests/test_critical_errors_fixed.py ...................F..           [100%]

================================= FAILURES =================================
___________ TestErrorHandlingFixes.test_attribute_error_handling ___________

self = <tests.test_critical_errors_fixed.TestErrorHandlingFixes object at 0x7ffaa9dacfd0>

    def test_attribute_error_handling(self):
        """Тест обработки ошибок атрибутов"""
    
        mock_obj = Mock()
    
        # Безопасная проверка атрибутов
        has_attr = hasattr(mock_obj, 'nonexistent_attr')
        assert isinstance(has_attr, bool)
    
        # Безопасное получение атрибута
        attr_value = getattr(mock_obj, 'nonexistent_attr', 'default')
>       assert attr_value == 'default'
E       AssertionError: assert <Mock name='mock.nonexistent_attr' id='140714570907088'> == 'default'

tests/test_critical_errors_fixed.py:494: AssertionError
========================= short test summary info ==========================
FAILED tests/test_critical_errors_fixed.py::TestErrorHandlingFixes::test_attribute_error_handling - AssertionError: assert <Mock name='mock.nonexistent_attr' id='140714570...
======================= 1 failed, 21 passed in 0.24s =======================
~/workspace$ 